# lab7

./: CMakeLists.txt  lab7.cpp
include/: Circule.h  Parallelogramm.h  Triangle.h  figure.h
src/: Circule.cpp  Parallelogramm.cpp  Triangle.cpp  figure.cpp
